readme and yaml files updated

--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: wonjun-todolist
-version: 2
+application: wonjun-math-447
+version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
